my first commit

--- a/index.html
+++ b/index.html
@@ -119,11 +119,19 @@
         .logo {
             text-align: center;
         }
-        .wrapper{
+
+        .wrapper {
             display: inline-flex;
             margin-left: 45%;
             cursor: pointer;
-            
+
+
+        }
+
+        footer {
+            margin-top: 40px;
+            text-align: center;
+            font-size: 40px;
         }
     </style>
 </head>
@@ -309,5 +317,6 @@
                         </div>
     </section>
 </body>
+<footer>Copyright © 2022 Football</footer>
 
 </html>
