--- a/index.html
+++ b/index.html
@@ -121,9 +121,17 @@
         }
 
         .wrapper {
-            display: inline-flex;
+
             margin-left: 45%;
             cursor: pointer;
+            height: 20px;
+            width: 50px;
+            box-shadow: 15px 15px 30px gray;
+            border-radius: 5px;
+            padding-left: 35px;
+            transition: all 0.3s ease-out;
+            display: flex;
+
 
 
         }
