--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         nav ul {
             display: flex;
             list-style: none;
-
-            margin-right: 15%;
+            background-color: rgb(252, 197, 227);
         }
 
         .player-banner {
@@ -46,8 +45,9 @@
 
         .banner img {
             border-radius: 30px;
-            margin-left: 100px;
+            margin-left: 0px;
             background-color: none;
+            background-color: rgb(252, 197, 227);
 
 
         }
@@ -127,7 +127,7 @@
             height: 20px;
             width: 50px;
             box-shadow: 15px 15px 30px gray;
-            border-radius: 5px;
+            border-radius: 50%;
             padding-left: 35px;
             transition: all 0.3s ease-out;
             display: flex;
